fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -172,4 +172,9 @@ body{
         background-color: transparent;
         font-size: .6em;
     }
+    .hero-bg {
+        top: -45%;
+        right: -40%;
+        z-index: 1;
+    }
 }
